creation project Hex

--- a/code/Hex/Hex/Hex.vcxproj.filters
+++ b/code/Hex/Hex/Hex.vcxproj.filters
@@ -18,13 +18,10 @@
     <ClCompile Include="game.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="ia.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
     <ClCompile Include="main.c">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="graph.c">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="stack.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,10 +29,7 @@
     <ClInclude Include="game.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="graph.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="stack.h">
+    <ClInclude Include="ia.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
