Fonction victoire dans le jeu

--- a/code/Hex/Hex/Hex.vcxproj
+++ b/code/Hex/Hex/Hex.vcxproj
@@ -133,10 +133,12 @@
     <ClCompile Include="game.c" />
     <ClCompile Include="ia.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="stack.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
     <ClInclude Include="ia.h" />
+    <ClInclude Include="stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
