tentative d'implementation de la fonction d'evaluation (profondeur de 1 test) + nouvelle fonction victoire

--- a/code/Hex/Hex/Hex.vcxproj
+++ b/code/Hex/Hex/Hex.vcxproj
@@ -130,8 +130,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="game.c" />
-    <ClCompile Include="ia.c" />
+    <ClCompile Include="game1.c" />
+    <ClCompile Include="game2.c" />
+    <ClCompile Include="ia1.c" />
+    <ClCompile Include="ia2.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="stack.c" />
   </ItemGroup>
