IA 4.0 + graphique + maj doc ia

--- a/code/Hex/Hex/Hex.vcxproj
+++ b/code/Hex/Hex/Hex.vcxproj
@@ -132,8 +132,9 @@
   <ItemGroup>
     <ClCompile Include="game1.c" />
     <ClCompile Include="game2.c" />
+    <ClCompile Include="game4.0.c" />
     <ClCompile Include="ia1.c" />
-    <ClCompile Include="ia2.c" />
+    <ClCompile Include="ia4.0.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="stack.c" />
   </ItemGroup>
