--- a/code/Hex/Hex/Hex.vcxproj.filters
+++ b/code/Hex/Hex/Hex.vcxproj.filters
@@ -27,10 +27,13 @@
     <ClCompile Include="stack.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="ia2.c">
+    <ClCompile Include="ia4.0.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="game1.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="game4.0.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
